tests/fails/vecindex2.t
import "compiler/liszt"

mesh = LoadMesh("examples/mesh.lmesh")

local vk = liszt_kernel(v)
	var x = {1, 2, true}
end
mesh.vertices:map(vk)
